--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "next": "15.1.7",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "svix": "^1.61.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.2"
